--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -244,11 +244,10 @@
                     padding: .5em;
                     background: transparent;
                     background-size: cover;
-                    margin: .5em 5vw;
+                    margin: 10vh 5vw;
                     position: relative;
                     z-index: 1;
                     text-overflow: ellipsis;
-                    transition: 0.2s;
                     overflow: hidden;
                     border-radius: 10px;
                     height: auto;
@@ -304,8 +303,8 @@
                         width: 100%;
                         border-radius: 10px;
                         height: 100%;
-                        box-shadow: inset 4px 4px 5px #ddda,
-                            inset -4px -4px 5px #000;
+                        box-shadow: inset 3px 3px 3px #ddda,
+                            inset -3px -3px 3px #000;
                         z-index: 2;
                     }
                     // end of skills-item box shadow
@@ -406,15 +405,17 @@
                     // end of skills items on tablets
                     // skills items on desktop
                     @media (min-width: 1024px) {
-                        flex-basis: 33%;
+                        flex-basis: 25%;
                         width: 100%;
                         margin: 1.5%;
                         height: 300px;
+                        height: 55vh;
+                        justify-content: space-evenly;
                         pointer-events: visible;
                         cursor: pointer;
                         transition: .2s;
                         &:hover {
-                            transition: .5s;
+                            transition: .3s;
                             transform: scale(1.05);
                         }
 
