--- a/css/style.css
+++ b/css/style.css
@@ -632,24 +632,13 @@ hamburger
         padding: .2em 1em;
         margin: .2em auto;
         font-size: 1.5em;
+        width: 70%;
         font-weight: 600;
         position: relative; }
         @media (min-width: 768px) {
           #contact .contact .contact-items .contact-item h2 {
             font-size: 1.7em;
             margin: .5em auto; } }
-        #contact .contact .contact-items .contact-item h2::before, #contact .contact .contact-items .contact-item h2:after {
-          content: '';
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          background-color: #20262e;
-          z-index: -1;
-          border-radius: 5px;
-          transition: .5s ease;
-          box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a, 3px 3px 3px rgba(0, 0, 0, 0.2); }
       #contact .contact .contact-items .contact-item .icon {
         margin: 5px auto 10px auto;
         padding: .3em .7em;
@@ -676,61 +665,63 @@ hamburger
             padding: 0; }
             #contact .contact .contact-items .contact-item .icon i {
               font-size: 2em; } }
-      #contact .contact .contact-items .contact-item .contact-info p {
-        font-size: .8em;
-        line-height: 1.3;
-        font-weight: 600;
-        letter-spacing: .1em;
-        padding: 1em;
-        border: none;
-        outline: none;
-        border-radius: 3px;
-        background: #fff;
-        margin: .5em auto;
-        color: #000;
-        transition: .5s ease;
-        position: relative;
-        z-index: -1; }
-        #contact .contact .contact-items .contact-item .contact-info p span {
-          display: block;
-          margin-top: .2em;
+      #contact .contact .contact-items .contact-item .contact-info {
+        width: 70%; }
+        #contact .contact .contact-items .contact-item .contact-info p {
+          font-size: .8em;
+          line-height: 1.3;
+          font-weight: 600;
+          letter-spacing: .1em;
+          padding: 1em;
+          border: none;
+          outline: none;
+          border-radius: 3px;
+          background: #fff;
+          margin: .5em auto;
           color: #000;
-          opacity: .8; }
-        @media (min-width: 768px) {
-          #contact .contact .contact-items .contact-item .contact-info p {
-            width: 100%;
-            text-align: center;
-            margin: .5em auto;
-            font-size: .9em; } }
-      #contact .contact .contact-items .contact-item .contact-info a {
-        width: 100%;
-        font-size: .8em;
-        line-height: 2rem;
-        display: inline-block;
-        letter-spacing: .1em;
-        padding: .2em .5em;
-        border-radius: 20px;
-        margin: .7em auto;
-        background: linear-gradient(0deg, #581212, #dc134c);
-        color: #eee;
-        opacity: .8;
-        cursor: pointer;
-        transition: .3s ease;
-        position: relative;
-        box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a, 3px 3px 3px rgba(0, 0, 0, 0.2); }
-        #contact .contact .contact-items .contact-item .contact-info a:hover {
-          transform: scale(0.97);
-          transition: .2s; }
-        #contact .contact .contact-items .contact-item .contact-info a:active {
-          transform: scale(0.9);
-          transition: .2s; }
-        #contact .contact .contact-items .contact-item .contact-info a i {
-          font-size: 1.5em;
+          transition: .5s ease;
           position: relative;
-          transform: translateY(100%);
-          opacity: 0;
-          transition: 1s ease;
-          transition-delay: .15s; }
+          z-index: -1; }
+          #contact .contact .contact-items .contact-item .contact-info p span {
+            display: block;
+            margin-top: .2em;
+            color: #000;
+            opacity: .8; }
+          @media (min-width: 768px) {
+            #contact .contact .contact-items .contact-item .contact-info p {
+              width: 100%;
+              text-align: center;
+              margin: .5em auto;
+              font-size: .9em; } }
+        #contact .contact .contact-items .contact-item .contact-info a {
+          width: 100%;
+          font-size: .8em;
+          line-height: 2rem;
+          display: inline-block;
+          letter-spacing: .1em;
+          padding: .2em .5em;
+          border-radius: 20px;
+          margin: .7em auto;
+          background: linear-gradient(0deg, #581212, #dc134c);
+          color: #eee;
+          opacity: .8;
+          cursor: pointer;
+          transition: .3s ease;
+          position: relative;
+          box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a, 3px 3px 3px rgba(0, 0, 0, 0.2); }
+          #contact .contact .contact-items .contact-item .contact-info a:hover {
+            transform: scale(0.97);
+            transition: .2s; }
+          #contact .contact .contact-items .contact-item .contact-info a:active {
+            transform: scale(0.9);
+            transition: .2s; }
+          #contact .contact .contact-items .contact-item .contact-info a i {
+            font-size: 1.5em;
+            position: relative;
+            transform: translateY(100%);
+            opacity: 0;
+            transition: 1s ease;
+            transition-delay: .15s; }
       #contact .contact .contact-items .contact-item:nth-child(1) {
         cursor: help; }
       #contact .contact .contact-items .contact-item:nth-child(2) {
