--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -99,6 +99,7 @@
                     padding: .2em 1em;
                     margin: .2em auto;
                     font-size: 1.5em;
+                    width: 70%;
                     font-weight: 600;
                     position: relative;
                     @media (min-width: 768px){
@@ -107,20 +108,20 @@
                     }
                     
                     // heading box shadows
-                    &::before,
-                    &:after {
-                        content: '';
-                        position: absolute;
-                        top: 0;
-                        left: 0;
-                        width: 100%;
-                        height: 100%;
-                        background-color: $overlay-blue-darker;
-                        z-index: -1;
-                        border-radius: 5px;
-                        transition: .5s ease;
-                        box-shadow: $box-light-top-sm;
-                    }
+                    // &::before,
+                    // &:after {
+                    //     content: '';
+                    //     position: absolute;
+                    //     top: 0;
+                    //     left: 0;
+                    //     width: 100%;
+                    //     height: 100%;
+                    //     background-color: $overlay-blue-darker;
+                    //     z-index: -1;
+                    //     border-radius: 5px;
+                    //     transition: .5s ease;
+                    //     box-shadow: $box-light-top-sm;
+                    // }
                     // end of heading box shadows
                 }
                 // end of item headings (h1)
@@ -161,7 +162,7 @@
                 // of end of item icon
                 // contact-info (h2)
                 .contact-info {
-                    // h2
+                    width: 70%;
                     p {
                         font-size: .8em;
                         line-height: 1.3;
