--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -155,7 +155,7 @@
                 &.about-article {
                     padding: .5em 1em;
                     height: 15vh;
-                    overflow: hidden;
+                    // overflow: hidden;
                     transition: .3s ease;
 
                     @media (max-width: 768px) {
@@ -197,7 +197,7 @@
                         &.about-body {
                             transition: opacity .5s ease;
                             opacity: 0;
-                            display: none;
+                            // display: none;
                             margin-bottom: .5em;
                             // color: $span-gold;
                             // padding: .3em;
@@ -228,7 +228,7 @@
 
                         .about-body {
                             transition: opacity 2s ease;
-                            display: block;
+                            // display: block;
                             opacity: 1;
                         }
                     }
