--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -96,7 +96,7 @@
                 // item headings (h1)
                 h2 {
                     color: $span-gold;
-                    padding: .2em 1em;
+                    padding: .2em .5rem;
                     margin: .2em auto;
                     font-size: 1.5em;
                     width: 70%;
