--- a/css/style.css
+++ b/css/style.css
@@ -672,7 +672,7 @@ hamburger
           line-height: 1.3;
           font-weight: 600;
           letter-spacing: .1em;
-          padding: 1em;
+          padding: 1em .5rem;
           border: none;
           outline: none;
           border-radius: 3px;
