--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -168,7 +168,7 @@
                         line-height: 1.3;
                         font-weight: 600;
                         letter-spacing: .1em;
-                        padding:  1em;
+                        padding:  1em .5rem;
                         border: none;
                         outline: none;
                         border-radius: 3px;
