removed fcc link in artice body and hidden overlow

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -155,7 +155,7 @@
                 &.about-article {
                     padding: .5em 1em;
                     height: 15vh;
-                    // overflow: hidden;
+                    overflow: hidden;
                     transition: .3s ease;
 
                     @media (max-width: 768px) {
