--- a/css/style.css
+++ b/css/style.css
@@ -828,6 +828,7 @@ hamburger
           background: #161616;
           margin: .5em 0 .5em;
           padding: .5em;
+          width: 100%;
           border: none;
           outline: none;
           border-radius: 5px;
