--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -134,6 +134,7 @@
                         background: #161616;
                         margin: .5em 0 .5em;
                         padding: .5em;
+                        width: 100%;
                         border: none;
                         outline: none;
                         border-radius: 5px;
