--- a/css/style.css
+++ b/css/style.css
@@ -1788,29 +1788,21 @@ body {
       #header .header #navbar .brand {
         transition: 1s ease;
         opacity: 0; }
-        #header .header #navbar .brand .brand-logo {
-          border: 1px solid #ead2a1;
-          border-radius: 5px;
-          width: 8.5rem;
-          height: 50%;
-          overflow: hidden; }
-          @media (min-width: 768px) {
-            #header .header #navbar .brand .brand-logo {
-              width: 10rem; } }
-          #header .header #navbar .brand .brand-logo img {
-            width: 100%; }
         #header .header #navbar .brand h1 {
           font-size: 1.25em;
           text-transform: uppercase;
           color: #f4f4f4;
+          font-weight: 800;
           font-family: 'Gruppo', cursive; }
           @media (min-width: 768px) {
             #header .header #navbar .brand h1 {
               font-size: 1.5em; } }
           #header .header #navbar .brand h1 span {
-            color: #ead2a1;
-            padding: 0;
-            margin: 0; }
+            margin: 0 .05rem;
+            padding: .05rem .3rem .05rem .3rem;
+            background: #ead2a1;
+            color: #29323c;
+            border-radius: 5px; }
       @media (max-width: 1024px) {
         #header .header #navbar .nav-list .links-container {
           position: absolute;
