--- a/css/style.css
+++ b/css/style.css
@@ -1792,6 +1792,7 @@ body {
           font-size: 1.25em;
           text-transform: uppercase;
           color: #f4f4f4;
+          color: #ead2a1;
           font-weight: 800;
           font-family: 'Gruppo', cursive; }
           @media (min-width: 768px) {
