--- a/scss/style.scss
+++ b/scss/style.scss
@@ -89,6 +89,7 @@ body {
 
                     text-transform: uppercase;
                     color: #f4f4f4;
+                    color: $span-gold;
                     font-weight: 800;
                     font-family: 'Gruppo', cursive;
                     // text-shadow: 0 0 5px $text-shadow-red;
