header h1 and span

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -51,7 +51,7 @@ $ul-background: #1f1e1e;
 $button-background-grey: #8584844b;
 $button-crimson: linear-gradient(0deg, #3f0d0d, #dc134c);
 $button-crimson-hover: linear-gradient(0deg, #dc134c , #3f0d0d);
-
+$button-gold: linear-gradient(0deg, hsl(40, 63%, 65%), #ead2a1);
 // form  
 $background-invalid: #f7cdd5c7;
 $text-invalid: #000;
