--- a/css/style.css
+++ b/css/style.css
@@ -1794,16 +1794,23 @@ body {
           color: #f4f4f4;
           color: #ead2a1;
           font-weight: 800;
-          font-family: 'Gruppo', cursive; }
+          font-family: 'Gruppo', cursive;
+          border: 1px solid #ead2a1;
+          padding-left: .15rem;
+          border-radius: 5px; }
           @media (min-width: 768px) {
             #header .header #navbar .brand h1 {
               font-size: 1.5em; } }
           #header .header #navbar .brand h1 span {
-            margin: 0 .05rem;
+            margin-left: .1rem;
             padding: .05rem .3rem .05rem .3rem;
             background: #ead2a1;
+            background: linear-gradient(0deg, #deb86e, #ead2a1);
+            border: none;
+            outline: none;
             color: #29323c;
-            border-radius: 5px; }
+            border-top-right-radius: 5px;
+            border-bottom-right-radius: 5px; }
       @media (max-width: 1024px) {
         #header .header #navbar .nav-list .links-container {
           position: absolute;
