--- a/css/style.css
+++ b/css/style.css
@@ -1109,12 +1109,11 @@ hamburger
         top: 0;
         left: 0;
         border-radius: 15px;
-        border: none;
-        outline: none;
         width: 100%;
         height: 100%;
         opacity: 1;
-        background: linear-gradient(0deg, #485563, #20262e); }
+        background: linear-gradient(0deg, #485563, #20262e);
+        transition: .2s; }
       .about .col-right button:hover {
         transform: scale(0.97); }
     .about .col-right .article-container article.about-article {
@@ -1171,7 +1170,7 @@ hamburger
           opacity: 1; }
     .about .col-right .article-container article#cv {
       display: flex;
-      justify-content: space-between;
+      justify-content: space-around;
       background: linear-gradient(0deg, #20262e, #485563);
       color: #ead2a1;
       margin: 0 auto;
