--- a/css/form.css
+++ b/css/form.css
@@ -69,10 +69,8 @@
       margin: .4em auto;
       padding: .5em;
       border-radius: 5px;
-      background: #20262e;
-      color: #ead2a1;
-      outline: 1px solid #ead2a1;
-      outline-offset: -4px; }
+      background: linear-gradient(0deg, #20262e, #485563);
+      color: #f4f4f4; }
       @media (max-width: 500px) {
         .welcome-section .form-container header {
           font-size: 1.3em;
@@ -118,9 +116,7 @@
               padding: .5em;
               border-radius: 5px;
               background: #20262e;
-              outline: 1px solid #f4f4f4;
-              outline-offset: -4px;
-              color: #f4f4f4;
+              color: #ead2a1;
               letter-spacing: .1em;
               font-size: .7em; }
             .welcome-section .form-container .form-outer form .page .title p {
@@ -134,11 +130,13 @@
             position: relative; }
             .welcome-section .form-container .form-outer form .page .field .label {
               position: absolute;
-              top: -30px;
+              top: -1rem;
+              transform: translateY(-0.5rem);
               font-weight: 800;
               color: #dc143c;
-              font-size: .9em;
-              text-transform: capitalize; }
+              font-size: 1rem;
+              text-transform: capitalize;
+              transition: .2s; }
             .welcome-section .form-container .form-outer form .page .field input {
               font-family: 'Poppins', sans-serif;
               height: 100%;
@@ -156,12 +154,11 @@
                 font-size: .7em; }
               .welcome-section .form-container .form-outer form .page .field input:invalid {
                 background: #cf30501e;
-                outline: 1px dashed #dc143c;
+                outline: none;
                 color: #000; }
               .welcome-section .form-container .form-outer form .page .field input:focus {
                 border: none;
-                outline: 2px dashed #f4f4f4;
-                outline-offset: -.3em;
+                outline: 1px dashed #333;
                 box-shadow: none; }
             .welcome-section .form-container .form-outer form .page .field textarea {
               height: 100px;
@@ -174,14 +171,10 @@
               background: #333;
               color: #ead2a1; }
               .welcome-section .form-container .form-outer form .page .field textarea:focus {
-                outline: 1px dashed #333;
-                outline-offset: -4px;
                 color: #333;
                 background: #fff; }
               .welcome-section .form-container .form-outer form .page .field textarea:invalid {
-                background: #f7cdd5c7;
-                outline: 1px dashed #dc143c;
-                outline-offset: -4px; }
+                background: #f7cdd5c7; }
             .welcome-section .form-container .form-outer form .page .field select {
               width: 100%;
               padding-left: 10px;
@@ -241,6 +234,9 @@
               .welcome-section .form-container .form-outer form .page .field button:active {
                 transition: .2s;
                 transform: scale(0.9); }
+            .welcome-section .form-container .form-outer form .page .field:hover .label {
+              transform: translateY(0) translateX(0.5rem);
+              color: #333; }
           .welcome-section .form-container .form-outer form .page .btns button {
             margin-top: -20px !important; }
             .welcome-section .form-container .form-outer form .page .btns button.prev {
