--- a/scss/style.scss
+++ b/scss/style.scss
@@ -547,7 +547,7 @@ body {
             outline: none;
             opacity: 1;
             // transform: rotateX(-90deg);
-            transform: scaleY(0);
+            transform: scale(0);
             transform-style: preserve-3d;
             animation: show-cta 4s 5.5s;
             animation-fill-mode: forwards;
