--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@ hamburger
 */
 #header .hamburger {
   font-size: 10px;
-  height: 3.5em;
-  width: 3.5em;
+  height: 3em;
+  width: 3em;
   margin: .5rem auto .5rem;
   display: inline-block;
   border-radius: 50%;
@@ -31,20 +31,19 @@ hamburger
     outline: none;
     transition: .5s ease; }
   #header .hamburger.hamburger::after {
-    opacity: 1;
-    box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 2px #000a; }
+    opacity: .8;
+    border: 0.2em solid #ead2a1; }
   #header .hamburger.hamburger:before {
-    border: .2em solid #fff;
+    border: 0.2em solid #ead2a1;
     opacity: 0;
     animation: ham-pulse 2.5s ease infinite .5s; }
 
 @keyframes ham-pulse {
   50% {
-    opacity: .7;
-    border-color: #ead2a1; }
+    opacity: .7; }
   100% {
     opacity: 0;
-    transform: scale(1.18); } }
+    transform: scale(1.3); } }
   #header .hamburger.no-pulse.hamburger::before {
     animation: none;
     animation-fill-mode: forwards; }
@@ -57,7 +56,7 @@ hamburger
       animation: none; }
   #header .hamburger .bar {
     height: .2em;
-    width: 2em;
+    width: 1.5em;
     position: relative;
     background-color: #f4f4f4;
     z-index: -1;
@@ -1826,7 +1825,7 @@ body {
           background-color: #1b2127;
           transition: .5s ease;
           overflow-y: auto;
-          z-index: 51; }
+          z-index: 5; }
           #header .header #navbar .nav-list .links-container ul {
             margin: 2em 5vw;
             background: #29323c;
