--- a/css/style.css
+++ b/css/style.css
@@ -32,9 +32,10 @@ hamburger
     transition: .5s ease; }
   #header .hamburger.hamburger::after {
     opacity: .8;
-    border: 0.2em solid #ead2a1; }
+    border: 0.15em solid #ead2a1;
+    box-shadow: inset 2px 2px 2px #ddda, inset -2px -2px 2px #000a; }
   #header .hamburger.hamburger:before {
-    border: 0.2em solid #ead2a1;
+    border: 0.15em solid #ead2a1;
     opacity: 0;
     animation: ham-pulse 2.5s ease infinite .5s; }
 
