--- a/scss/style.scss
+++ b/scss/style.scss
@@ -432,7 +432,7 @@ body {
 // hero section
 #home {
     background-color: $overlay-blue-dark;
-    background: $overlay-dark;
+    background: $overlay;
     position: relative;
     z-index: 1;
     overflow: hidden;
