--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@ hamburger
   width: 100vw;
   padding-bottom: 15vh;
   margin: 0 auto;
-  background: linear-gradient(-60deg, #29323c 0%, #485563 100%);
+  background: linear-gradient(0deg, #29323c 0%, #485563 100%);
   background: #fff; }
   #skills .skills-header {
     width: 100%;
@@ -273,8 +273,7 @@ hamburger
   text-align: left;
   padding: .5rem;
   margin: 2em auto;
-  background: #29323c;
-  backdrop-filter: blur(5px);
+  background: linear-gradient(0deg, #29323c 0%, #485563 100%);
   border-radius: 10px;
   border: none;
   position: relative;
@@ -454,7 +453,7 @@ hamburger
           height: 100%;
           border-radius: 10px;
           width: 100%;
-          background: linear-gradient(-60deg, #29323c 0%, #485563 100%);
+          background: linear-gradient(0deg, #29323c 0%, #485563 100%);
           opacity: 0.8;
           z-index: -1; }
         #skills .dropdown .dropdown-content .skills-bottom .skills-item:before {
@@ -620,7 +619,7 @@ hamburger
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: #29323c;
+        background: linear-gradient(0deg, #20262e, #485563);
         box-shadow: inset 3px 3px 4px #ddda, inset -3px -3px 4px #000a, 5px 5px 1px rgba(0, 0, 0, 0.1);
         border-radius: 10px;
         z-index: -2;
@@ -705,7 +704,6 @@ hamburger
           margin: .7em auto;
           background: linear-gradient(0deg, #581212, #dc134c);
           color: #eee;
-          opacity: .8;
           cursor: pointer;
           transition: .3s ease;
           position: relative;
@@ -788,7 +786,7 @@ hamburger
         align-items: flex-start;
         justify-content: center;
         flex-direction: column;
-        background-color: #29323c;
+        background: linear-gradient(0deg, #20262e, #485563);
         transition: 1.3s ease; }
         @media (min-width: 768px) {
           #projects .projects .all-projects .project-item .project-tile {
@@ -1294,7 +1292,7 @@ hamburger
         opacity: 1; }
 
 #footer {
-  background-image: linear-gradient(-60deg, #29323c 0%, #485563 100%);
+  background-image: linear-gradient(0deg, #20262e, #29323c 50%);
   background-color: #333; }
   #footer .footer {
     min-height: 100vh;
@@ -1312,6 +1310,8 @@ hamburger
       text-transform: capitalize;
       margin-bottom: 1.5em;
       font-size: 2em; }
+      #footer .footer .footer-section-title[data-scroll] {
+        transform: scale(1); }
     #footer .footer form {
       background-color: #29323c;
       width: 100%;
@@ -1576,7 +1576,7 @@ hamburger
           content: '\f337';
           text-align: center;
           color: #eee;
-          background: linear-gradient(-60deg, #29323c 0%, #485563 100%);
+          background: linear-gradient(0deg, #29323c 0%, #485563 100%);
           box-shadow: inset 3px 3px 5px rgba(221, 221, 221, 0.156), inset -3px -3px 5px rgba(0, 0, 0, 0.156); }
       #footer .footer .brand:hover h3::before {
         left: 100%;
@@ -2019,7 +2019,7 @@ body {
 
 #home {
   background-color: #29323c;
-  background: linear-gradient(-60deg, #20262e 0%, #29323c 100%);
+  background: linear-gradient(0deg, #29323c 0%, #485563 100%);
   position: relative;
   z-index: 1;
   overflow: hidden; }
