--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -45,8 +45,7 @@
         margin: 2em auto;
         // background-image: var(--overlay);
         // background: #48556388;
-        background: $overlay-blue-dark;
-        backdrop-filter: blur(5px);
+        background: $overlay;
         border-radius: 10px;
         border: none;
         position: relative;
