--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -85,7 +85,7 @@
                     justify-content: center;
                     flex-direction: column;
                     // background-color: $overlay-blue-dark;
-                    background: $overlay-btn;
+                    background: $overlay-dark;
                     transition: 1.3s ease;
                     // project Title (h1)
                     h1 {
