--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -283,8 +283,8 @@ hamburger
     position: fixed;
     bottom: 1em;
     right: 1em;
-    background-image: linear-gradient(0deg, rgb(0, 0, 0), #dc143c);
-    
+    // background-image: linear-gradient(0deg, rgb(0, 0, 0), #dc143c);
+    background: $button-crimson;
     display: grid;
     place-items: center;
     border-radius: 5px;
