--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -21,6 +21,7 @@
                 margin-bottom: 1.5em;
                 font-size: 2em;
                 &[data-scroll] {
+                    transition: 1.5s;
                     transform: scale(1);
                 }
         }
