--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -38,6 +38,7 @@
             z-index: 10;
             // DATA-SCROLL
             &[data-scroll] {
+                transition: 1.5s;
                 transform: scale(1);
             }
             // project item
