--- a/css/style.css
+++ b/css/style.css
@@ -2098,19 +2098,21 @@ body {
   #home .hero #cta-header {
     font-size: 1.3em;
     position: relative;
-    display: inline-block;
+    display: block;
     text-align: center;
+    text-align: left;
     font-family: 'Gruppo',cursive;
-    padding: .5em 1em;
+    padding: .5em;
     margin: 0;
     width: 100%;
-    border-radius: 20px;
+    width: auto;
+    border-radius: 10px;
     border: none;
     outline: none;
-    opacity: 1;
-    transform: scale(0);
+    opacity: 0;
+    transform: scale(0.5);
     transform-style: preserve-3d;
-    animation: show-cta 4s 5.5s;
+    animation: show-cta 4s 6s;
     animation-fill-mode: forwards;
     transition: .3s linear;
     cursor: pointer;
@@ -2118,7 +2120,9 @@ body {
     z-index: 2; }
     @media (min-width: 768px) {
       #home .hero #cta-header {
-        font-size: 1.5em; } }
+        font-size: 1.5em;
+        width: 100%;
+        text-align: center; } }
 
 @keyframes show-cta {
   100% {
@@ -2131,13 +2135,13 @@ body {
       left: 0;
       width: 100%;
       height: 100%;
-      border-radius: 20px;
+      border-radius: 10px;
       transition: .3s ease;
       border: none;
       outline: none; }
     #home .hero #cta-header::before {
-      box-shadow: inset 4px 4px 5px #ddda, inset -4px -4px 5px #000a;
-      background: linear-gradient(0deg, #581212, #dc134c); }
+      box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a, 3px 3px 3px rgba(0, 0, 0, 0.2);
+      background: linear-gradient(0deg, #20262e, #485563); }
     #home .hero #cta-header::after {
       opacity: 1;
       z-index: -1;
@@ -2146,13 +2150,14 @@ body {
       transition: .3s;
       outline: none;
       border: none;
-      background: linear-gradient(0deg, #dc134c, #581212);
-      box-shadow: inset 4px 4px 5px #ddda, inset -4px -4px 5px #000a; }
+      background: linear-gradient(0deg, #485563, #20262e);
+      box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px #ddda, 3px 3px 3px rgba(0, 0, 0, 0.2); }
     #home .hero #cta-header span {
       position: relative;
       display: inline-block;
       text-transform: uppercase;
       color: #f4f4f4;
+      color: #ead2a1;
       font-size: 2em;
       font-weight: 700;
       animation: animate 3s ease-in-out infinite;
@@ -2164,24 +2169,63 @@ body {
   0% {
     transform: translateY(0px); }
   20% {
+    color: #f4f4f4;
     transform: translateY(-10px) scale(1.1); }
   40%,
   100% {
     transform: translateY(0); } }
-    #home .hero #cta-header:hover {
-      transform: scale(0.9); }
-      #home .hero #cta-header:hover span {
-        color: #ead2a1;
-        animation: none; }
-      #home .hero #cta-header:hover::before {
-        opacity: 0; }
-      #home .hero #cta-header:hover::after {
-        opacity: 1; }
-    #home .hero #cta-header:hover {
-      transform: scale(0.97); }
+    #home .hero #cta-header:hover span {
+      color: #ead2a1;
+      animation: none; }
+    #home .hero #cta-header:hover::before {
+      opacity: 0; }
+    #home .hero #cta-header:hover::after {
+      opacity: 1; }
     #home .hero #cta-header:active {
       transition: .2s;
       transform: scale(0.95); }
+  #home #cta {
+    position: absolute;
+    bottom: 10vh;
+    left: 5vw; }
+    #home #cta .cta {
+      font-size: 1.5rem;
+      color: #f4f4f4;
+      text-transform: capitalize;
+      padding: .5rem;
+      border-radius: 20px;
+      cursor: pointer;
+      border: none;
+      position: relative;
+      isolation: isolate;
+      transition: .2s; }
+      #home #cta .cta::before, #home #cta .cta::after {
+        position: absolute;
+        content: '';
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: none;
+        outline: none;
+        transition: .2s;
+        border-radius: 20px;
+        z-index: -1; }
+      #home #cta .cta::before {
+        background: linear-gradient(0deg, #3f0d0d, #dc134c);
+        box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a, 3px 3px 3px rgba(0, 0, 0, 0.2); }
+      #home #cta .cta::after {
+        opacity: 0;
+        background: linear-gradient(0deg, #dc134c, #3f0d0d);
+        box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px #ddda, 3px 3px 3px rgba(0, 0, 0, 0.2); }
+      #home #cta .cta:hover {
+        transform: scale(0.98); }
+      #home #cta .cta:active {
+        transform: scale(0.98); }
+        #home #cta .cta:active::before {
+          opacity: 0; }
+        #home #cta .cta:active::after {
+          opacity: 1; }
 
 .section-pad {
   height: 90vh;
