--- a/scss/style.scss
+++ b/scss/style.scss
@@ -324,7 +324,8 @@ body {
                 box-shadow: $box-dark-top-sm;
             }
             &:hover {
-                transform: scale(.98);
+                &::before {opacity: 0;}
+                &::after {opacity: 1;}
             }
             &:active {
                 transform: scale(.98);
