--- a/css/style.css
+++ b/css/style.css
@@ -2187,18 +2187,27 @@ body {
   #home #cta {
     position: absolute;
     bottom: 10vh;
-    left: 5vw; }
+    left: 5vw;
+    transform: translateY(20vh);
+    transition: 1s; }
+    #home #cta.scrollOut {
+      transform: translateY(0); }
     #home #cta .cta {
       font-size: 1.5rem;
+      font-family: "Ubuntu", sans-serif;
       color: #f4f4f4;
       text-transform: capitalize;
       padding: .5rem;
+      width: 15rem;
       border-radius: 20px;
+      display: block;
+      text-align: center;
       cursor: pointer;
       border: none;
       position: relative;
       isolation: isolate;
-      transition: .2s; }
+      transition: .2s;
+      letter-spacing: .05rem; }
       #home #cta .cta::before, #home #cta .cta::after {
         position: absolute;
         content: '';
@@ -2218,10 +2227,12 @@ body {
         opacity: 0;
         background: linear-gradient(0deg, #dc134c, #3f0d0d);
         box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px #ddda, 3px 3px 3px rgba(0, 0, 0, 0.2); }
-      #home #cta .cta:hover::before {
-        opacity: 0; }
-      #home #cta .cta:hover::after {
-        opacity: 1; }
+      #home #cta .cta:hover {
+        letter-spacing: normal; }
+        #home #cta .cta:hover::before {
+          opacity: 0; }
+        #home #cta .cta:hover::after {
+          opacity: 1; }
       #home #cta .cta:active {
         transform: scale(0.98); }
         #home #cta .cta:active::before {
